force-app/main/default/objects/CAP_Level__c/CAP_Level__c.object-meta.xml
<CustomObject>
    <description>Stores CAP and Custom Setting data for each Action Plan Level in Visual Workflow</description>
    <label>CAP Level</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD} CD-{000000}</displayFormat>
        <label>Curriculum Level ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CAP Levels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>