force-app/main/default/objects/CAP_Level__c/fields/CAP__c.field-meta.xml
<CustomField>
    <fullName>CAP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CAP</label>
    <referenceTo>CAP__c</referenceTo>
    <relationshipName>Curriculum_Decisions</relationshipName>
    <type>Lookup</type>
</CustomField>