force-app/main/default/objects/CAP_Level__c/fields/CAP_Business_Function__c.field-meta.xml
<CustomField>
    <fullName>CAP_Business_Function__c</fullName>
    <formula>CASE( Index__c, 
0,  TEXT(Flow_State__r.CAP_0__r.Business_Function__c) , 
1, TEXT(Flow_State__r.CAP_1__r.Business_Function__c), 
2,TEXT(Flow_State__r.CAP_2__r.Business_Function__c), 
3, TEXT(Flow_State__r.CAP_3__r.Business_Function__c),Flow_State__r.Business_Function__c)</formula>
    <label>CAP Business Function</label>
    <type>Text</type>
</CustomField>