force-app/main/default/objects/CAP_Level__c/fields/CAP_Letter__c.field-meta.xml
<CustomField>
    <fullName>CAP_Letter__c</fullName>
    <formula>CASE( Index__c,
0,  Flow_State__r.Letter_0__c  , 
1, Flow_State__r.Letter_1__c ,
2, Flow_State__r.Letter_2__c ,
3, Flow_State__r.Letter_3__c ,&quot;&quot;)</formula>
    <label>CAP Letter</label>
    <type>Text</type>
</CustomField>