force-app/main/default/objects/CAP_Level__c/fields/CAP_Trigger__c.field-meta.xml
<CustomField>
    <fullName>CAP_Trigger__c</fullName>
    <formula>CASE( Index__c, 
0,  TEXT(Flow_State__r.CAP_0__r.Trigger__c) , 
1, TEXT(Flow_State__r.CAP_1__r.Trigger__c), 
2,TEXT(Flow_State__r.CAP_2__r.Trigger__c), 
3, TEXT(Flow_State__r.CAP_3__r.Trigger__c),Flow_State__r.Trigger__c)</formula>
    <label>CAP Trigger</label>
    <type>Text</type>
</CustomField>