force-app/main/default/objects/CAP_Level__c/fields/Custom_Setting_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Custom_Setting_Category_Code__c</fullName>
    <label>Custom Setting Category Code</label>
    <length>26</length>
    <type>Text</type>
</CustomField>