force-app/main/default/objects/CAP_Level__c/fields/Custom_Setting_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Custom_Setting_Developer_Name__c</fullName>
    <label>Custom Setting Developer Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>