force-app/main/default/objects/CAP_Level__c/fields/Custom_Setting_Id__c.field-meta.xml
<CustomField>
    <fullName>Custom_Setting_Id__c</fullName>
    <label>Custom Setting Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>