force-app/main/default/objects/CAP_Level__c/fields/Custom_Setting_Label__c.field-meta.xml
<CustomField>
    <fullName>Custom_Setting_Label__c</fullName>
    <label>Custom Setting Label</label>
    <type>TextArea</type>
</CustomField>