force-app/main/default/objects/CAP_Level__c/fields/Custom_Setting_Letter__c.field-meta.xml
<CustomField>
    <fullName>Custom_Setting_Letter__c</fullName>
    <label>Custom Setting Letter</label>
    <length>1</length>
    <type>Text</type>
</CustomField>