force-app/main/default/objects/CAP_Level__c/fields/Custom_Setting_Value__c.field-meta.xml
<CustomField>
    <fullName>Custom_Setting_Value__c</fullName>
    <label>Custom Setting Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>