force-app/main/default/objects/CAP_Level__c/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <formula>CASE(Index__c, 
0, TEXT(Flow_State__r.CAP_0__r.Field_Type_0__c) , 
1, TEXT(Flow_State__r.CAP_1__r.Field_Type_1__c), 
2, TEXT(Flow_State__r.CAP_2__r.Field_Type_2__c), 
3, TEXT(Flow_State__r.CAP_3__r.Field_Type_3__c),
4, &quot;FINISH&quot;, &quot;N/A&quot;)</formula>
    <label>Field Type</label>
    <type>Text</type>
</CustomField>