force-app/main/default/objects/CAP_Level__c/fields/Letter_Label__c.field-meta.xml
<CustomField>
    <fullName>Letter_Label__c</fullName>
    <formula>CASE( Index__c,
0,  Flow_State__r.Letter_Label_0__c , 
1, Flow_State__r.Letter_Label_1__c ,
2, Flow_State__r.Letter_Label_2__c ,
3, Flow_State__r.Letter_Label_3__c ,
4,  TEXT(Flow_State__r.User_Feedback_6__c), &quot;N/A&quot;)</formula>
    <label>Letter Label</label>
    <type>Text</type>
</CustomField>