force-app/main/default/objects/CAP_Level__c/fields/Letter_Value__c.field-meta.xml
<CustomField>
    <fullName>Letter_Value__c</fullName>
    <formula>CASE( Index__c,
0,  Flow_State__r.Letter_Value_0__c  , 
1, Flow_State__r.Letter_Value_1__c ,
2, Flow_State__r.Letter_Value_2__c ,
3, Flow_State__r.Letter_Value_3__c ,&quot;N/A&quot;)</formula>
    <label>Letter Value</label>
    <type>Text</type>
</CustomField>