force-app/main/default/objects/CAP_Level__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Custom_Setting_Link__c</columns>
    <columns>Flow_State__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Index__c</columns>
    <columns>Field_Type__c</columns>
    <columns>Custom_Setting_Category_Code__c</columns>
    <columns>Custom_Setting_Label__c</columns>
    <columns>Custom_Setting_Value__c</columns>
    <columns>CAP_Business_Function__c</columns>
    <columns>CAP_Letter__c</columns>
    <columns>CAP_Trigger__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>